--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.servlet.session.timeout=1800
 server.servlet.session.tracking-modes=cookie
-spring.profiles.include = DB
+spring.profiles.include = SECRET
